FC-105 - [fortress-core] - command line interface